--- a/case-decomposition-meets-ellipsis.tex
+++ b/case-decomposition-meets-ellipsis.tex
@@ -3,6 +3,7 @@
 \chapter{Case decomposition meets ellipsis}
 
 
+
 \section{Problem with previous analyses of headless relatives}
 
 
@@ -13,7 +14,11 @@ What I do is start is start from morphology. There we have complex case: dat - a
 What we see in syntax is a by-product of the morphology, it´s a consequence, it´s an indirect relation. cause and effect
 if the morphology is different, than so will the syntax
 
-\section{Case decomposition in morphology}
+
+
+\section{Morphology}
+
+\subsection{Case decomposition}
 
 \ex.
 \begin{forest} boom
@@ -30,11 +35,20 @@ if the morphology is different, than so will the syntax
 \end{forest}
 
 
+morphological containment
 
 
-\section{Phrasal spellout}
+
+
+
+\subsection{Phrasal spellout}
 
 Single morphemes spell out phrases
+
+suppletion and syncretism
+
+
+
 
 
 
