--- a/reoccuring-pattern.tex
+++ b/reoccuring-pattern.tex
@@ -46,7 +46,7 @@ Extern
 
 
 
-\section{matching}
+\subsection{matching}
 
 
 \begin{table}[H]
@@ -82,17 +82,15 @@ Extern
 
 
 
-\section{non-matching}
+\subsection{non-matching}
 
 \ex. \ac{int}:\ac{nom}, \ac{ext}:\ac{acc}
-\a. \ac{nom} not attested
-\bg. jah [þo -ei ist us Laudeikaion] jus ussiggwaid\\
+\ag. jah [þo -ei ist us Laudeikaion] jus ussiggwaid\\
  and what.\ac{acc} -\tsc{comp} is\scsub{[nom]} from Laodicea you read\scsub{[acc]}\\
  `and read that which is from Laodicea' \flushfill{Gothic, \ac{col} 4:16, after \pgcitealt{harbert1978}{357}}
 
 \ex. \ac{int}:\ac{nom}, \ac{ext}:\ac{dat}
-\a. \ac{nom} not attested
-\bg. [þaim -ei iupa sind] fraþjaiþ\\
+\ag. [þaim -ei iupa sind] fraþjaiþ\\
  what.\ac{dat} -\tsc{comp} above are\scsub{[nom]} {think on}\scsub{[dat]}\\
  `set your mind on those which are above' \flushfill{Gothic, \ac{col} 3:2, after \pgcitealt{harbert1978}{339}}
 
@@ -100,11 +98,9 @@ Extern
 \ag. [þan -ei frijos] siuks ist\\
  who.\ac{acc} -\tsc{comp} love\scsub{[acc]} sick is\scsub{[nom]}\\
  `the one whom you love is sick' \flushfill{Gothic, \ac{john} 11:3, after \pgcitealt{harbert1978}{342}}
-\b. \ac{nom} not attested
 
 \ex. \ac{int}:\ac{acc}, \ac{ext}:\ac{dat}
-\a. \ac{acc} not attested
-\bg. hva nu wileiþ ei taujau [þamm -ei qiþiþ þiudan Iudaie]?\\
+\ag. hva nu wileiþ ei taujau [þamm -ei qiþiþ þiudan Iudaie]?\\
  what now want that do\scsub{[dat]} who.\ac{dat} -\tsc{comp} say\scsub{[acc]} king {of Jews}\\
  `what now do you wish that I do to him whom you call King of the Jews?' \flushfill{Gothic, \ac{mark} 15:12, after \pgcitealt{harbert1978}{339}}
 
@@ -112,13 +108,14 @@ Extern
 \ag. iþ [þamm -ei leitil fraletada] leitil frijod\\
  but who.\ac{dat} -\tsc{comp} little {is forgiven\scsub{[dat]}} little loves\scsub{[nom]}\\
  `but the one whom little is forgiven loves little' \flushfill{Gothic, \ac{luke} 7:47, after \pgcitealt{harbert1978}{342}}
-\b. \ac{nom} not attested
 
-\ex. \ac{int}:\ac{dat}, \ac{ext}:\ac{acc}, is with a preposition
+\ex. \ac{int}:\ac{dat}, \ac{ext}:\ac{acc}
 \ag. ushafjands [ana þamm -ei lag]\\
  {picking up}\scsub{[acc]} on\scsub{[dat]} what.\ac{dat} -\tsc{comp} lay\\
  `picking up that on which he lay' \flushfill{Gothic, \ac{luke} 5:25, after \pgcitealt{harbert1978}{343}}
-\b. \ac{acc} not attested
+
+
+\footnote{Throughout this dissertation * stands for 'not found in natural language'. For extinct languages this means that there are no attested examples. For modern languages it means that they examples are ungrammatical.}
 
 \input{tables/gothic-grammaticality.tex}
 
