--- a/tables/gothic-grammaticality.tex
+++ b/tables/gothic-grammaticality.tex
@@ -12,17 +12,17 @@
             \\ \cmidrule{1-4}
         [\ac{nom}]
             & \colorbox{LG}{\ac{nom}}
-            & \diagbox[linecolor=white]{?\ac{nom}}{\colorbox{DG}{\ac{acc}}}
-            & \diagbox[linecolor=white]{?\ac{nom}}{\colorbox{DG}{\ac{dat}}}
+            & \diagbox[linecolor=white]{*\ac{nom}}{\colorbox{DG}{\ac{acc}}}
+            & \diagbox[linecolor=white]{*\ac{nom}}{\colorbox{DG}{\ac{dat}}}
             \\ \cmidrule{1-4}
         [\ac{acc}]
-            & \diagbox[linecolor=white]{\colorbox{DG}{\ac{acc}}}{?\ac{nom}}
+            & \diagbox[linecolor=white]{\colorbox{DG}{\ac{acc}}}{*\ac{nom}}
             & \colorbox{LG}{\ac{acc}}
-            & \diagbox[linecolor=white]{?\ac{acc}}{\colorbox{DG}{\ac{dat}}}
+            & \diagbox[linecolor=white]{*\ac{acc}}{\colorbox{DG}{\ac{dat}}}
             \\ \cmidrule{1-4}
         [\ac{dat}]
-            & \diagbox[linecolor=white]{\colorbox{DG}{\ac{dat}}}{?\ac{nom}}
-            & \diagbox[linecolor=white]{\colorbox{DG}{\ac{dat}}}{?\ac{acc}}
+            & \diagbox[linecolor=white]{\colorbox{DG}{\ac{dat}}}{*\ac{nom}}
+            & \diagbox[linecolor=white]{\colorbox{DG}{\ac{dat}}}{*\ac{acc}}
             & \colorbox{LG}{\ac{dat}}
             \\
       \bottomrule
