--- a/variation.tex
+++ b/variation.tex
@@ -107,17 +107,17 @@ So, to sum up:
 						\\ \cmidrule{1-4}
 				[\ac{nom}]
 						& \colorbox{LG}{\ac{nom}}
-						& \diagbox[linecolor=white]{?\ac{nom}}{\colorbox{DG}{\ac{acc}}}
-						& \diagbox[linecolor=white]{?\ac{nom}}{\colorbox{DG}{\ac{dat}}}
+						& \diagbox[linecolor=white]{*\ac{nom}}{\colorbox{DG}{\ac{acc}}}
+						& \diagbox[linecolor=white]{*\ac{nom}}{\colorbox{DG}{\ac{dat}}}
 						\\ \cmidrule{1-4}
 				[\ac{acc}]
-						& \diagbox[linecolor=white]{?\ac{acc}}{?\ac{nom}}
+						& \diagbox[linecolor=white]{*\ac{acc}}{*\ac{nom}}
 						&	\colorbox{LG}{\ac{acc}}
-						&	\diagbox[linecolor=white]{?\ac{acc}}{\colorbox{DG}{\ac{dat}}}
+						&	\diagbox[linecolor=white]{*\ac{acc}}{\colorbox{DG}{\ac{dat}}}
 						\\ \cmidrule{1-4}
 				[\ac{dat}]
-						& \diagbox[linecolor=white]{?\ac{dat}}{?\ac{nom}}
-						&	\diagbox[linecolor=white]{?\ac{dat}}{?\ac{acc}}
+						& \diagbox[linecolor=white]{*\ac{dat}}{*\ac{nom}}
+						&	\diagbox[linecolor=white]{*\ac{dat}}{*\ac{acc}}
 						& \colorbox{LG}{\ac{dat}}
 						\\
 			\bottomrule
