--- a/introduction.tex
+++ b/introduction.tex
@@ -56,36 +56,33 @@ The relative pronoun without the complementizer \tit{-ei} is \tit{þana}. Theref
 
 \exg. gaarma [þan -ei arma]\\
  pity\scsub{[acc]} who.\ac{acc} -\tsc{comp} pity\scsub{[acc]}\\
- `I will pity him whom I pity' \flushfill{Gothic, \ac{rom} 9:15, after \pgcitealt{harbert1978}{339}}\label{ex:gothicaccacc}
+ `I will pity (him) whom I pity' \flushfill{Gothic, \ac{rom} 9:15, after \pgcitealt{harbert1978}{339}}\label{ex:gothicaccacc}
 
-Where does this accusative case assignment come from? Logically speaking, there are two candidates: the predicate in the main clause \tit{gaarma} `pity' and the predicate in the relative clause \tit{arma} `pity'. Did the predicate in the relative clause \tit{arma} `pity' assign accusative case? In the headed relative clauses in \ref{ex:germanrelatives}, the relative pronoun received its case from the predicate in the relative clause. The crucial difference with that type of relative clause is that there is a head for the main clause to assign its case to. Did the predicate in the main clause \tit{gaarma} `pity' assign accusative case? I will argue that both of them did. Actually, \ref{ex:gothicaccacc} is the first example I gave of case competition in a headless relative. It is an uninteresting one, because the two competing cases are identical.
+Where does this accusative case assignment come from? Logically speaking, there are two candidates: the predicate in the main clause \tit{gaarma} `pity' and the predicate in the relative clause \tit{arma} `pity'. Did the predicate in the relative clause \tit{arma} `pity' assign accusative case? In the headed relative clauses in \ref{ex:germanrelatives}, the relative pronoun received its case from the predicate in the relative clause. The crucial difference with that type of relative clause is that there is a head for the main clause to assign its case to. Did the predicate in the main clause \tit{gaarma} `pity' assign accusative case? I will argue that both of them did. \ref{ex:gothicaccacc} is indeed the first example I gave of case competition in a headless relative. It is an uninteresting one, because the two competing cases are identical.
 
-In the remainder of this section I show evidence for the claim that relative pronouns in headless relatives take the case of the predicate in the relative clause and the predicate in the main clause. This evidence comes from headless relatives in which the predicate in the relative clause takes a different case from the predicate in the main clause.
+In the remainder of this section I show evidence for the claim that there is case competition going on in headless relatives. I illustrate that relative pronouns can take the case assigned from within the relative clause or the case assigned from outside the relative clause (the main clause).
 
-Consider the example in \ref{ex:gothicaccdat}. The relative clause is \tit{ana þamm -ei lag} `on what he lay'.
-- here the subscript are on the preposition, because the preposition selects for a case
-- on selects for dative, which is in the relative clause
-- picking up selects for accusative which is in the relative clause
-- we see this dative on the relative pronoun, and this can only come from the relative clause predicate
+Consider the example in \ref{ex:gothicaccdat}. In this example there is a subscript on a preposition, indicating that this is the element that assigns the case. The relative clause is placed between squared brackets. The preposition \tit{ana} `on' is part of the relative clause, and it assigns dative case. The predicate \tit{ushafjands} `picking up' is not part of the relative clause but it is situated in the main clause. This predicate assigns accusative case. The relative pronoun \tit{þamm(a)} appears in the dative case. This dative can only be assigned by the preposition \tit{ana} `on', which is part of the relative clause.
 
 \exg. ushafjands [ana þamm -ei lag]\\
  {picking up}\scsub{[acc]} on\scsub{[dat]} what.\ac{dat} -\tsc{comp} lay\\
- `picking up that on which he lay' \flushfill{Gothic, \ac{luke} 5:25, after \pgcitealt{harbert1978}{343}}\label{ex:gothicaccdat}
+ `picking up (that) on which he lay' \flushfill{Gothic, \ac{luke} 5:25, after \pgcitealt{harbert1978}{343}}\label{ex:gothicaccdat}
 
--realtive: say selects for accusative
--main: do selects dative
-- we see the dative again, and this can only come from the main clause
+The conclusion that follows is that in headless relatives the relative pronoun can take the case assigned within the relative clause. At this point it remains unclear what happened to the accusative case which is assigned by the predicate in the main clause.
+
+Now consider the example in \ref{ex:gothicdatacc}. The relative clause is placed between squared brackets. The predicate \tit{qiþiþ} `say' is part of the relative clause, and assigns accusative case. The predicate \tit{taujau} `do' is not part of the relative clause but it is situated in the main clause. This predicate assign dative case. The relative pronoun \tit{þamm(a)} appears in the dative case. This dative can only be assigned by the predicate \tit{taujau} `do', which is part of the main clause.
 
 \exg. hva nu wileiþ ei taujau [þamm -ei qiþiþ þiudan Iudaie]?\\
  what now want that do\scsub{[dat]} who.\ac{dat} -\tsc{comp} say\scsub{[acc]} king {of Jews}\\
- `what now do you wish that I do to him whom you call King of the Jews?' \flushfill{Gothic, \ac{mark} 15:12, after \pgcitealt{harbert1978}{339}}
+ `what now do you wish that I do to (him) whom you call King of the Jews?' \flushfill{Gothic, \ac{mark} 15:12, after \pgcitealt{harbert1978}{339}}\label{ex:gothicdatacc}
 
+The conclusion that follows is that in headless relatives the relative pronoun takes the case assigned in the main clause. Again, it is unclear at this point what happened to the accusative case, which is now assigned by the predicate in the relative clause.
 
+Please take from this: case can come from both clauses, then something happens.
 
 
 
 \section{The content of this dissertation}
-
 
 1=case competition, there is a heirarchy. cite people
 first, what holds for all languages is that there is a single order: highest in the hierarchy wins
@@ -95,4 +92,4 @@ secondly I adress an aspect that differs across languages
 that is, not all languages are like gothic
 I connect this crosslinguistic variation to morphology.. so i reduce it to differences in the lexicon
 
-finally, i show how all of this can be derived in derivations
+In Part \ref{part:details} I show how all of this can be derived in derivations
