--- a/thesis.tex
+++ b/thesis.tex
@@ -39,7 +39,7 @@
 \include{variation}
 \include{morphology-syntax}
 
-\part{Details}
+\part{Details}\label{part:details}
 \include{details}
 
 \include{conclusion}
