--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -127,3 +127,11 @@
   year = {2009},
   pages = {1-6}
 }
+
+@book{weber1983,
+  title={Relativization and nominalized clauses in Huallaga (Huanuco) Quechua},
+  author={Weber, David},
+  volume={103},
+  year={1983},
+  publisher={University of California Press}
+}
