--- a/introduction.tex
+++ b/introduction.tex
@@ -78,18 +78,48 @@ Now consider the example in \ref{ex:gothicdatacc}. The relative clause is placed
 
 The conclusion that follows is that in headless relatives the relative pronoun takes the case assigned in the main clause. Again, it is unclear at this point what happened to the accusative case, which is now assigned by the predicate in the relative clause.
 
-Please take from this: case can come from both clauses, then something happens.
+The examples in \ref{ex:gothicaccdat} and \ref{ex:gothicdatacc} have shown that the relative pronoun in headless relatives is sensitive to cases assigned from within the relative clause and from the main clause. In these examples, accusative and dative were assigned, and it both cases, the relative pronoun appeared in dative case. In other words, there was a competition between accusative and dative, and dative won.
 
 
 
 \section{The content of this dissertation}
 
-1=case competition, there is a heirarchy. cite people
-first, what holds for all languages is that there is a single order: highest in the hierarchy wins
-in the first part, I..
+In the previous section I introduced the notion of case competition, and I illustrated how it appears in headless relatives. This dissertation discusses two question regarding this phenomenon.
+The first one is which case is going to win the case competition, i.e. which case surfaces. I discuss this in Part \ref{part:complexity}.
+The second question is whether both competitors are able to compete in the competition, i.e. whether one of the cases is surfacing or both are ungrammatical. I discuss this in Part \ref{part:direction}.
+For both I will show that morphology is leading. What we observe in syntax is a reflex of the morphology.
 
-secondly I adress an aspect that differs across languages
-that is, not all languages are like gothic
+In Part \ref{part:complexity} I discuss the pattern observed in headless relatives in Gothic. This pattern has also been described for German, Greek, etc. etc. references references.
+The pattern that arises in headless relatives is not restricted to headless relatives. It can also be observed in another syntactic phenomenon: the accessiblity hierarchy. This is..
+Lastly: the pattern we observe in these two syntactic phenomena is what we know from morphology. I discuss patterns in morphology: formal containment, syncretism patterns, suppletion patterns.
+
+In Part \ref{part:complexity} I discuss an aspect of headless relatives that differs per language. That is, not all languages act like Gothic.
+
+\ex. Modern German
+\ag. accusative dative\\
+ \\
+ `'
+\bg. dative accusative\\
+ \\
+ `'
+
+ \ex. Old High German
+ \ag. accusative dative\\
+  \\
+  `'
+ \bg. dative accusative\\
+  \\
+  `'
+
+  \ex. Italian
+  \ag. accusative dative\\
+   \\
+   `'
+  \bg. dative accusative\\
+   \\
+   `'
+
+So far people said..
 I connect this crosslinguistic variation to morphology.. so i reduce it to differences in the lexicon
 
-In Part \ref{part:details} I show how all of this can be derived in derivations
+In Part \ref{part:details} I show how all of this can be derived in derivations.
