--- a/reoccuring-pattern.tex
+++ b/reoccuring-pattern.tex
@@ -127,6 +127,89 @@ Extern
 
 \section{The accessibility hierarchy}
 
+\subsection{Agreement}
+
+\ex.
+\ag. Nǐ bǎ shū gěi wǒ-le.\\
+ you ba book give me-\tsc{asp}\\
+ `You gave me the book.' \flushfill{Mandarin Chinese}
+\bg. Du gib -st mi das Buch.\\
+ \tsc{nom}.2\tsc{sg} give -\tbf{2\tsc{sg}} \tsc{acc}.3\tsc{sg}.f the book\\
+ `You give me the book.' \flushfill{German}
+\bg. tayta-yki qam-ta qu -maran\\
+ father-2 you-\tsc{acc} give -\tbf{\tsc{3}->1}.\tsc{past}\\
+ `Your father gave you to me.' \flushfill{Huallaga Quechua, \citealt{weber1983}{21}}
+\bg. Zu-k ni-ri liburu-a emon d -austa -zu.\\
+ 2\tsc{sg}.\tsc{erg} 1\tsc{sg}.\tsc{dat} book.\tsc{acc} given \tbf{\tsc{acc}.3\tsc{sg}} \tbf{-\tsc{dat}.1\tsc{sg}} \tbf{-\tsc{erg}.2\tsc{sg}}\\
+ `You gave me the book.' \flushfill{Basque, Arregi and Molina-Azaola}
+
+\begin{table}[H]
+  \center
+  \caption {Agreement accessibility}
+    \begin{tabular}{ccccc}
+      \toprule
+            \multicolumn{3}{c}{agreement with}
+            &
+          & \\
+      \cmidrule{1-3}
+            subject
+            & direct object
+            & indirect object
+            & number of languages
+          & example \\
+      \cmidrule{1-3} \cmidrule{4-4} \cmidrule{5-5}
+            -
+            & -
+            & -
+            & 23
+          & Mandarin Chinese \\
+            x
+            & -
+            & -
+            & 31
+          & German \\
+            x
+            & x
+            & -
+            & 25
+          & Huallaga Quechua \\
+            x
+            & x
+            & x
+            & 23
+          & Basque \\
+            x
+            & -
+            & x
+            & (1)
+          & - \\
+            -
+            & x
+            & x
+            & 0
+          & - \\
+            -
+            & x
+            & -
+            & 0
+          & - \\
+            -
+            & -
+            & x
+            & 0
+          & - \\
+      \bottomrule
+    \end{tabular}
+\end{table}
+
+
+
+\subsection{Relativization}
+
+
+
+
+
 \ex. \ac{nom} - \ac{acc} - \ac{dat}
 
 gives examples of each of these languages
