--- a/thesis.tex
+++ b/thesis.tex
@@ -31,11 +31,11 @@
 
 \include{introduction}
 
-\part{The constant case complexity}
+\part{The winner of the competition}\label{part:complexity}
 \include{reoccuring-pattern}
 \include{case-decomposition-meets-ellipsis}
 
-\part{The direction that differs}
+\part{The competitors in the competition}\label{part:direction}
 \include{variation}
 \include{morphology-syntax}
 
