--- a/case-decomposition-meets-ellipsis.tex
+++ b/case-decomposition-meets-ellipsis.tex
@@ -60,13 +60,8 @@ Ellipsis targets phrases
 
 
 
-\section{Relation between morphology and syntax}
+\section{Reflex of morphology in syntax}
 
-
-
-
-
-\section{The intuition}
 
 \subsection{Morphology}
 
