--- a/fenna-files/abbreviations.sty
+++ b/fenna-files/abbreviations.sty
@@ -90,6 +90,49 @@
   class = abbr
 }
 
+\DeclareAcronym{asp}{
+  short = \tsc{asp} ,
+  long  = aspectual marker ,
+  class = abbr
+}
+
+\DeclareAcronym{pst}{
+  short = \tsc{pst} ,
+  long  = past ,
+  class = abbr
+}
+
+\DeclareAcronym{pass}{
+  short = \tsc{pass} ,
+  long  = passive ,
+  class = abbr
+}
+
+\DeclareAcronym{prog}{
+  short = \tsc{prog} ,
+  long  = progressive ,
+  class = abbr
+}
+
+\DeclareAcronym{erg}{
+  short = \tsc{erg} ,
+  long  = ergative ,
+  class = abbr
+}
+
+\DeclareAcronym{def}{
+  short = \tsc{def} ,
+  long  = definite ,
+  class = abbr
+}
+
+\DeclareAcronym{rel}{
+  short = \tsc{rel} ,
+  long  = relativizer ,
+  class = abbr
+}
+
+
 \DeclareAcronym{ohg}{
   short = OHG ,
   long  = Old High German ,
