--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -135,3 +135,24 @@
   year={1983},
   publisher={University of California Press}
 }
+
+@article{keenan1977,
+  title={Noun phrase accessibility and universal grammar},
+  author={Keenan, Edward L and Comrie, Bernard},
+  journal={Linguistic inquiry},
+  volume={8},
+  number={1},
+  pages={63--99},
+  year={1977},
+  publisher={JSTOR}
+}
+
+@inproceedings{arregi2004,
+  title={Restructuring in Basque and the theory of agreement},
+  author={Arregi, Karlos and Molina-Azaola, Gainko},
+  booktitle={Proceedings of WCCFL},
+  volume={23},
+  pages={101--114},
+  year={2004},
+  organization={Citeseer}
+}
