--- a/fenna-files/packages.sty
+++ b/fenna-files/packages.sty
@@ -53,8 +53,9 @@ boom/.style={for tree={s sep=10mm, inner sep=0, l=0}}
 
 %%%ABBREVIATIONS%%%
 \usepackage{acro}
-\acsetup{first-style=short, cite=all, list-style=tabular}
+\acsetup{first-style=short, cite=all, list-style=longtable}
 \DeclareInstance{acro-title}{empty}{sectioning}{name-format =}
+\usepackage{longtable}
 %%%ABBREVIATIONS%%%
 
 
