bij jan vandaan
added matching examples

--- a/reoccuring-pattern.tex
+++ b/reoccuring-pattern.tex
@@ -8,9 +8,9 @@ A phenomenon goes parallel with the ordering
 
 \section{Case competition in Gothic headless relatives}
 
-In the introduction I already showed accusative vs. dative, and dative always won. Here I additionaly add nomniative. I will show that ordering of strenght is nom-acc-dat.
+In the introduction I already showed accusative vs. dative, and dative always won. Here I additionally add nominative. I will show that ordering of strength is nom-acc-dat.
 
-First some terminilogy.
+First some terminology.
 Intern
 Extern
 
@@ -44,9 +44,29 @@ Extern
 \end{table}
 
 
-
-
 \subsection{matching}
+
+\exg. ei [sa -ei þis matjai,] ni gadauþnai\\
+ that who.\ac{acc} -\tsc{comp} of this eats\scsub{[nom]} not die\scsub{[nom]}\\
+ `that (he) who eats of this may not die' \flushfill{Gothic, \ac{john} 6:50, after \pgcitealt{harbert1978}{337}}\label{ex:gothicnomnom}
+
+\exg. gaarma [þan -ei arma]\\
+ pity\scsub{[acc]} who.\ac{acc} -\tsc{comp} pity\scsub{[acc]}\\
+ `I will pity (him) whom I pity' \flushfill{Gothic, \ac{rom} 9:15, after \pgcitealt{harbert1978}{339}}\label{ex:gothicaccacc}
+
+\ex.
+\ag. [þamm -ei gabaur] gabaur\\
+ who.\ac{dat} -\tsc{comp} tribute\scsub{[dat]} tribute\scsub{[dat]}\\
+ `tribute to (him) whom tribute is due'
+\bg. [þamm -ei mota] mota\\
+ who.\ac{dat} -\tsc{comp} custom\scsub{[dat]} custom\scsub{[dat]}\\
+ `custom to (him) whom custom is due'
+\bg. [þamm -ei agis] agis\\
+ who.\ac{dat} -\tsc{comp} fear\scsub{[dat]} fear\scsub{[dat]}\\
+ `fear to (him) whom fear is due'
+\bg. [þamm -ei sweriþa] sweriþa\\
+ who.\ac{dat} -\tsc{comp} honour\scsub{[dat]} honour\scsub{[dat]}\\
+ `honour to (him) whom honour is due' \flushfill{Gothic, \ac{rom} 13:7, after \pgcitealt{harbert1978}{339}}\label{ex:gothicdatdat}
 
 
 \begin{table}[H]
